# nucleus

./: .dockerignore  .editorconfig  .gitignore  .lattice-test  .line-ratchet.toml  .mcp.json  .pre-commit-config.yaml  .vendor-neutrality-allowlist  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  Cross.toml  DEPENDENCY_AUDIT.md  FORMAL_METHODS.md  LICENSE-APACHE  Makefile  NORTH_STAR.md  PolicyManifest.toml  README.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_2026_02_24.md  SECURITY_TODO.md  STABILITY.md  VERIFIED_CLAIMS.md  action.yml  adversarial-architect.md  adversarial-buyer.md  adversarial-ciso.md  adversarial-claims.json  adversarial-results.json  book.toml  deny.toml  fly.toml  justfile  maturity.json  north-star.md  objective.md  qa-findings-dashboard.md  (+3 more)
.cargo/: audit.toml  (+1 more)
benchmarks/agentdojo/: pyproject.toml
benchmarks/agentdojo/portcullis_defense/: __init__.py  defense.py  exposure.py  run_benchmark.py  test_exposure.py  tool_map.py
crates/ck-kernel/: Cargo.toml  README.md
crates/ck-kernel/src/: gate.rs  kani.rs  lib.rs  lineage.rs  test_harness.rs
crates/ck-kernel/tests/: demo_two_amendments.rs
crates/ck-policy/: Cargo.toml  README.md
crates/ck-policy/lean/: Ck.lean  lake-manifest.json  lakefile.lean
crates/ck-policy/lean-aeneas/: CkPolicyAeneas.lean  README.md  lake-manifest.json  lakefile.lean
crates/ck-policy/src/: extracted.rs  lib.rs  preflight.rs
crates/ck-policy/tests/: policy_aeneas_parity.rs  policy_lean_parity.rs
crates/ck-types/: Cargo.toml  README.md
crates/ck-types/src/: digest.rs  lib.rs  manifest.rs  witness.rs
crates/ctf-engine/: .dockerignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html
crates/ctf-engine/src/: engine.rs  level.rs  lib.rs  sandbox.rs  takeaways.rs  wasm_bindings.rs
crates/ctf-mcp/: Cargo.toml
crates/ctf-mcp/src/: main.rs
crates/ctf-server/: Cargo.toml  Dockerfile
crates/ctf-server/src/: main.rs  mcp.rs  openapi.rs
crates/ctf-server/static/: api.html
crates/exposure-playground/: Cargo.toml
crates/exposure-playground/src/: app.rs  lib.rs  main.rs
crates/exposure-web/: Cargo.toml  index.html
crates/exposure-web/src/: lib.rs
crates/lattice-guard/: Cargo.toml  LICENSE-APACHE  README.md  THREAT_MODEL.md
crates/lattice-guard/examples/: basic_usage.rs  claude_code_integration.rs  math_framework.rs
crates/lattice-guard/src/: audit.rs  audit_backend.rs  budget.rs  capability.rs  certificate.rs  command.rs  delegation.rs  escalation.rs  frame.rs  galois.rs  graded.rs  guard.rs  heyting.rs  identity.rs  intent.rs  isolation.rs  kani.rs  lattice.rs  lib.rs  metrics.rs  modal.rs  path.rs  permissive.rs  pipeline.rs  progress.rs  region.rs  time.rs  weakening.rs
crates/lattice-guard/tests/: adversarial.rs  attack_landscape.rs  delegation_chain_demo.rs  example_policies.rs  owasp_llm_gauntlet.rs  proptest_lattice.rs  proptest_math_framework.rs  proptest_permissive.rs  verus_conformance.rs
crates/nucleus-agent-card/: Cargo.toml  README.md
crates/nucleus-agent-card/examples/: agent_sign.rs
crates/nucleus-agent-card/src/: anchor.rs  card.rs  conformance_tests.rs  envelope.rs  envelope_e2e_tests.rs  jcs.rs  jwk.rs  lib.rs  sign.rs  sign_verify_tests.rs  verify.rs
crates/nucleus-agent-card/tests/: handshake.rs
crates/nucleus-audit/: Cargo.toml  README.md
crates/nucleus-audit/fixtures/: sample-mcp-config.json  sample-podspec.yaml  sample-receipts.jsonl
crates/nucleus-audit/src/: discover.rs  finding.rs  main.rs  report.rs  sarif.rs  scan_agent_settings.rs  scan_claude_settings.rs  scan_mcp_config.rs  scan_podspec.rs  suggest.rs  tool_pattern.rs  verify_build.rs
crates/nucleus-bundle-cas/: Cargo.toml  README.md
crates/nucleus-bundle-cas/src/: fetch.rs  hash.rs  lib.rs  publish.rs
crates/nucleus-bundle-cas/tests/: integration.rs
crates/nucleus-claude-hook/: Cargo.toml  README.md  clippy.toml
crates/nucleus-claude-hook/src/: bench.rs  build.rs  c2pa_output.rs  classify.rs  cli.rs  color.rs  commands.rs  completions.rs  config.rs  config_provenance.rs  context.rs  denial.rs  doctor.rs  exit_codes.rs  help.rs  init.rs  integrity.rs  main.rs  protocol.rs  receipts.rs  session.rs  setup.rs  status.rs  term_builder.rs  url_policy.rs  web_taint.rs
crates/nucleus-cli/: Cargo.toml  README.md
crates/nucleus-cli/src/: audit.rs  bundle.rs  config.rs  constants.rs  doctor.rs  envelope.rs  envelope_verify.rs  guard.rs  identity.rs  keychain.rs  lineage.rs  lineage_verify.rs  lockdown.rs  main.rs  manifest.rs  node.rs  observe.rs  profiles.rs  replay.rs  run.rs  setup.rs  shell.rs  start.rs  stop.rs  token.rs
crates/nucleus-cli/tests/: macos_m3m4.rs
crates/nucleus-client/: Cargo.toml  README.md
crates/nucleus-client/src/: drand.rs  lib.rs
crates/nucleus-control-plane/: Cargo.toml  README.md
crates/nucleus-control-plane-server/: Cargo.toml  Dockerfile  README.md  fly.toml
crates/nucleus-control-plane-server/src/: app.rs  auth.rs  error.rs  events.rs  grpc.rs  lib.rs  main.rs  registry.rs  routes.rs  state.rs  webhook.rs
crates/nucleus-control-plane-server/tests/: integration.rs
crates/nucleus-control-plane/proto/: job_service.proto
crates/nucleus-control-plane/src/: executor.rs  lib.rs  runner.rs  session_writer.rs  spec.rs  state.rs
crates/nucleus-control-plane/tests/: integration.rs
crates/nucleus-creditworthiness/: Cargo.toml  README.md
crates/nucleus-creditworthiness/src/: commons_view.rs  crdt.rs  eligibility.rs  ledger.rs  lib.rs  mint.rs  store.rs
crates/nucleus-econ-kernels/: Cargo.toml
crates/nucleus-econ-types/: Cargo.toml
crates/nucleus-envelope/: Cargo.toml  README.md
crates/nucleus-envelope-adversarial-corpus/: Cargo.toml  README.md
crates/nucleus-eval/: Cargo.toml
crates/nucleus-externality/: Cargo.toml
crates/nucleus-fly-oidc/: Cargo.toml  README.md
crates/nucleus-github-oidc/: Cargo.toml  KEYLESS_OIDC_PROTOTYPE.md  README.md
crates/nucleus-guest-init/: Cargo.toml  README.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: command_can_execute.rs  path_can_access.rs  permission_serde.rs  workload_api_command.rs
(+1169 files in other folders)
