[workspace]
members = [
    "crates/portcullis",  # Policy: quotient lattice types
    "crates/nucleus",        # Enforcement: wraps OS APIs with policy checks
    "crates/nucleus-cli",    # CLI: distributed executor with enforcement
    "crates/nucleus-client", # Client signing utilities
    "crates/nucleus-spec",   # Shared PodSpec definitions
    "crates/nucleus-proto",  # Generated gRPC/Protobuf types
    "crates/nucleus-node",   # Node daemon (kubelet analogue)
    "crates/nucleus-tool-proxy", # Tool proxy server (runs inside pod)
    "crates/nucleus-guest-init", # Guest init for Firecracker images
    "crates/nucleus-net-probe", # TCP probe for network policy tests
    "crates/nucleus-mcp", # MCP server bridging Claude to tool-proxy
    "crates/nucleus-audit", # Audit log verifier CLI
    "crates/nucleus-ifc",      # Standalone IFC library for AI agents
    "crates/nucleus-memory",   # Governed memory with IFC labels
    "crates/nucleus-identity", # SPIFFE-based workload identity
    "crates/exposure-playground", # Interactive TUI demo for HN
    "crates/nucleus-sdk",        # Rust SDK for building sandboxed AI agents
    "crates/nucleus-permission-market", # Lagrangian permission pricing oracle
    "crates/ctf-engine",               # CTF engine: formally verified sandbox challenge
    "crates/ctf-server",               # HTTP API server for The Vault CTF
    "crates/ctf-mcp",                  # MCP server: lets any AI agent play The Vault CTF
    "crates/portcullis-core",            # Aeneas verification target: dependency-free lattice types
    "crates/ck-types",                  # Constitutional Kernel: core types, manifests, digests
    "crates/ck-policy",                 # Constitutional Kernel: monotonicity checker
    "crates/ck-kernel",                 # Constitutional Kernel: admission engine + lineage
    "crates/nucleus-claude-hook",        # Claude Code PreToolUse hook via Nucleus kernel
]
# exposure-web is WASM-only (wasm32-unknown-unknown); build with: cd crates/exposure-web && trunk build
# portcullis-python requires Python + maturin; build with: cd crates/portcullis-python && maturin develop
exclude = [
    "crates/exposure-web",       # WASM-only (wasm32-unknown-unknown)
    "crates/portcullis-python",  # Python bindings (requires maturin)
    "crates/portcullis-zkvm-guest", # RISC-V zkVM guest (compiled separately by risc0-build)
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Coproduct <hello@coproduct.dev>"]

[workspace.lints.clippy]
type_complexity = "allow"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.1"

# Content provenance (EU AI Act)
c2pa = "0.78"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1", default-features = false }
tokio-rustls = "0.26"
tokio-test = "0.4"

# CLI
clap = { version = "4.6", features = ["derive", "env"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry (opt-in via feature flags)
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "trace"] }
tracing-opentelemetry = "0.32"

# Crypto/signing
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
ring = "0.17"

# TLS
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
x509-parser = { version = "0.18", features = ["verify"] }

# HTTP
reqwest = { version = "0.13", default-features = false }
axum = { version = "0.8", features = ["macros", "json"] }
ureq = { version = "3.3", features = ["json"] }

# gRPC
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
rust_decimal = "1.41"
shell-words = "1.1"
regex = "1.12"

# Encoding
base64 = "0.22"

# Testing
tempfile = "3"
proptest = "1.11"

# AWS SDK (optional, for remote audit sink)
aws-sdk-s3 = "1.127"
aws-config = { version = "1.6", features = ["behavior-version-latest"] }

# zkVM (verifiable computation receipts)
risc0-zkvm = "3.0"

# Build
tonic-prost-build = "0.14"
protoc-bin-vendored = "3.2"
