[workspace]
members = [
    "crates/portcullis",  # Policy: quotient lattice types
    "crates/nucleus",        # Enforcement: wraps OS APIs with policy checks
    "crates/nucleus-cli",    # CLI: distributed executor with enforcement
    "crates/nucleus-client", # Client signing utilities
    "crates/nucleus-spec",   # Shared PodSpec definitions
    "crates/nucleus-proto",  # Generated gRPC/Protobuf types
    "crates/nucleus-node",   # Node daemon (kubelet analogue)
    "crates/nucleus-tool-proxy", # Tool proxy server (runs inside pod)
    "crates/nucleus-guest-init", # Guest init for Firecracker images
    "crates/nucleus-net-probe", # TCP probe for network policy tests
    "crates/nucleus-mcp", # MCP server bridging Claude to tool-proxy
    "crates/nucleus-audit", # Audit log verifier CLI
    "crates/nucleus-ifc",      # Standalone IFC library for AI agents
    "crates/nucleus-memory",   # Governed memory with IFC labels
    "crates/nucleus-identity", # SPIFFE-based workload identity
    "crates/exposure-playground", # Interactive TUI demo for HN
    "crates/nucleus-sdk",        # Rust SDK for building sandboxed AI agents
    "crates/nucleus-permission-market", # Lagrangian permission pricing oracle
    "crates/ctf-engine",               # CTF engine: formally verified sandbox challenge
    "crates/ctf-server",               # HTTP API server for The Vault CTF
    "crates/ctf-mcp",                  # MCP server: lets any AI agent play The Vault CTF
    "crates/portcullis-core",            # Aeneas verification target: dependency-free lattice types
    "crates/portcullis-effects",         # Sealed effect traits — I/O only through policy-enforced channels
    "crates/portcullis-profiles",        # Application-specific task profiles (plugin, not kernel)
    "crates/ck-types",                  # Constitutional Kernel: core types, manifests, digests
    "crates/ck-policy",                 # Constitutional Kernel: monotonicity checker
    "crates/ck-kernel",                 # Constitutional Kernel: admission engine + lineage
    "crates/nucleus-lineage",            # Per-call SPIFFE-derived data lineage
    "crates/nucleus-envelope",           # Portable provenance bundle: payload + IFC envelope
    "crates/nucleus-envelope-adversarial-corpus", # Adversarial bundles every verifier must reject — CI-gated security promise
    "crates/nucleus-otel-bootstrap",     # Shared OpenTelemetry OTLP bootstrap for server binaries
    "crates/nucleus-control-plane",      # Job orchestrator: typed JobSpec → agent → Bundle
    "crates/nucleus-control-plane-server", # REST API server wrapping nucleus-control-plane
    "crates/nucleus-verifier-service",   # Public verifier-as-a-service for provenance bundles
    "crates/nucleus-oidc-provider",      # OIDC OP: JWT-SVID issuance + RFC 8693 token exchange
    "crates/nucleus-oidc-core",          # Provider-agnostic OIDC primitives (JWKS, JtiCache, federation)
    "crates/nucleus-fly-oidc",           # Per-provider validator: Fly.io machine OIDC → SPIFFE
    "crates/nucleus-github-oidc",        # Per-provider validator: GitHub Actions OIDC → SPIFFE
]
# nucleus-claude-hook moved to nucleus-code (private product repo)
# exposure-web is WASM-only (wasm32-unknown-unknown); build with: cd crates/exposure-web && trunk build
# portcullis-python requires Python + maturin; build with: cd crates/portcullis-python && maturin develop
exclude = [
    "crates/exposure-web",       # WASM-only (wasm32-unknown-unknown)
    "crates/portcullis-python",  # Python bindings (requires maturin)
    "crates/portcullis-zkvm-guest", # RISC-V zkVM guest (compiled separately by risc0-build)
    "sdks/verifier-js",           # WASM-only (wasm32-unknown-unknown); build with: wasm-pack build sdks/verifier-js
    "sdks/verifier-py",           # Python extension module; build with: maturin develop --release
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
authors = ["Coproduct <hello@coproduct.dev>"]

[workspace.lints.clippy]
type_complexity = "allow"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.1"

# Content provenance (EU AI Act)
c2pa = "0.84"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# JWT / OIDC (per-provider validators). `rust_crypto` matches nucleus-lineage's
# jsonwebtoken pin so the workspace doesn't drag in a second crypto backend.
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem", "rust_crypto"] }
async-trait = "0.1"

# Async runtime
tokio = { version = "1", default-features = false }
tokio-rustls = "0.26"
tokio-test = "0.4"

# CLI
clap = { version = "4.6", features = ["derive", "env"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry (opt-in via feature flags)
# Pinned to 0.31 because tracing-opentelemetry 0.32.1 (latest) still depends on
# opentelemetry ^0.31; bumping to 0.32 here introduces a Tracer-trait mismatch.
# Revisit when tracing-opentelemetry releases a 0.32-compatible version.
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "http-proto", "trace"] }
tracing-opentelemetry = "0.33"

# Crypto/signing
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
ring = "0.17"

# TLS
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
x509-parser = { version = "0.18", features = ["verify"] }

# HTTP
reqwest = { version = "0.13", default-features = false }
axum = { version = "0.8", features = ["macros", "json"] }
ureq = { version = "3.3", features = ["json"] }

# gRPC
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
rust_decimal = "1.42"
shell-words = "1.1"
regex = "1.12"

# Encoding
base64 = "0.22"

# Testing
tempfile = "3"
proptest = "1.11"

# AWS SDK (optional, for remote audit sink)
aws-sdk-s3 = "1.133"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }

# zkVM (verifiable computation receipts)
risc0-zkvm = "3.0"

# Build
tonic-prost-build = "0.14"
protoc-bin-vendored = "3.2"
