[workspace]
members = [
    "crates/portcullis",  # Policy: quotient lattice types
    "crates/nucleus-policy-kernel", # PCA: reference monitor (decide / governance_monotone)
    "crates/nucleus-policy-cert",   # PCA: recompute-verifiable certificates (R1)
    "crates/nucleus-pca",           # PCA: the unified verify() SDK facade
    "crates/nucleus",        # Enforcement: wraps OS APIs with policy checks
    "crates/nucleus-cli",    # CLI: distributed executor with enforcement
    "crates/nucleus-client", # Client signing utilities
    "crates/nucleus-spec",   # Shared PodSpec definitions
    "crates/nucleus-proto",  # Generated gRPC/Protobuf types
    "crates/nucleus-node",   # Node daemon (kubelet analogue)
    "crates/nucleus-tool-proxy", # Tool proxy server (runs inside pod)
    "crates/nucleus-mcp-guard",  # Trifecta Gate: observe-only MCP proxy, flags exfil risk
    "crates/nucleus-guest-init", # Guest init for Firecracker images
    "crates/nucleus-net-probe", # TCP probe for network policy tests
    "crates/nucleus-mcp", # MCP server bridging Claude to tool-proxy
    "crates/nucleus-audit", # Audit log verifier CLI
    "crates/nucleus-ifc",      # Standalone IFC library for AI agents
    "crates/nucleus-memory",   # Governed memory with IFC labels
    "crates/nucleus-identity", # SPIFFE-based workload identity
    "crates/exposure-playground", # Interactive TUI demo for HN
    "crates/nucleus-sdk",        # Rust SDK for building sandboxed AI agents
    "crates/nucleus-permission-market", # Lagrangian permission pricing oracle
    "crates/ctf-engine",               # CTF engine: formally verified sandbox challenge
    "crates/ctf-server",               # HTTP API server for The Vault CTF
    "crates/ctf-mcp",                  # MCP server: lets any AI agent play The Vault CTF
    "crates/nucleus-ifc-kernel",         # IFC admission core: dependency-free reference monitor (Aeneas target)
    "crates/portcullis-core",            # Aeneas verification target: dependency-free lattice types
    "crates/portcullis-effects",         # Sealed effect traits — I/O only through policy-enforced channels
    "crates/portcullis-wasi",            # WASI 0.3.0 world functor: capability lattice → component import world
    "crates/portcullis-profiles",        # Application-specific task profiles (plugin, not kernel)
    "crates/ck-types",                  # Constitutional Kernel: core types, manifests, digests
    "crates/ck-policy",                 # Constitutional Kernel: monotonicity checker
    "crates/ck-kernel",                 # Constitutional Kernel: admission engine + lineage
    "crates/nucleus-lineage",            # Per-call SPIFFE-derived data lineage
    "crates/nucleus-provenance-memory",  # Provenance-backed, taint-labeled, recompute-verified, CRDT-mergeable agent memory
    "crates/nucleus-provenance",          # Fail-closed third-party artifact provenance (DSSE/in-toto) at the spawn boundary
    "crates/nucleus-envelope",           # Portable provenance bundle: payload + IFC envelope
    "crates/nucleus-receipt",            # Colimit receipt envelope: Session + Projection[] + Ed25519/BLAKE3 Receipt (upstream home of platform's substrate-core envelope)
    "crates/nucleus-bundle-cas",         # Content-addressed bundle transport: BLAKE3 root + iroh-blobs
    "crates/nucleus-envelope-adversarial-corpus", # Adversarial bundles every verifier must reject — CI-gated security promise
    "crates/nucleus-otel-bootstrap",     # Shared OpenTelemetry OTLP bootstrap for server binaries
    "crates/nucleus-control-plane",      # Job orchestrator: typed JobSpec → agent → Bundle
    "crates/nucleus-control-plane-server", # REST API server wrapping nucleus-control-plane
    "crates/nucleus-verifier-service",   # Public verifier-as-a-service for provenance bundles
    "crates/nucleus-witness",            # C2SP tlog-witness server: mints cosignatures with the spec status matrix
    "crates/nucleus-witness-gossip",     # Slice 1: best-effort gossip message layer + fail-closed head verification (no iroh; transport is slice 2)
    "crates/nucleus-node-binding",       # Signed transport-identity binding (NodeId <-> passport principal); domain-separated ed25519, no iroh (conversions are a later slice)
    "crates/nucleus-oidc-provider",      # OIDC OP: JWT-SVID issuance + RFC 8693 token exchange
    "crates/nucleus-oidc-core",          # Provider-agnostic OIDC primitives (JWKS, JtiCache, federation)
    "crates/nucleus-fly-oidc",           # Per-provider validator: Fly.io machine OIDC → SPIFFE
    "crates/nucleus-github-oidc",        # Per-provider validator: GitHub Actions OIDC → SPIFFE
    "crates/nucleus-agent-card",         # Verify-before-you-act: signed Agent Card → TrustAnchor
    "crates/nucleus-trust-registry",     # "Let's Encrypt for agents": PR-rooted, OIDC-attested, transparency-logged SPIFFE federation enrollment
    "crates/xtask",                      # Rust-native dev/CI task runner (cargo xtask <cmd>); migrating scripts/*.sh
    "crates/nucleus-machine",            # MachineDriver: microVM execution-substrate abstraction (mock + Fly skeleton)
    "crates/nucleus-verify-commerce",    # Seller-side verify→serve→receipt middleware for x402/A2A (scaffold)
    "crates/nucleus-marketplace-dashboard", # Real-time verified-agent-marketplace: axum SSE orchestrator over the IFC gate (network-free core)
    "crates/nucleus-econ-types",            # Financially load-bearing newtypes (MicroUsd, ids); serde-only
    "crates/nucleus-externality",           # Pigouvian externality envelopes + rate-setter
    "crates/nucleus-econ-kernels",          # PROVEN integer VCG + Pigou + sealed-bid kernels (parity-pinned to Lean)
    "crates/nucleus-recompute",             # verify_receipt: re-derive every cleared number from declared inputs via the proven kernels
    "crates/nucleus-witness-olog",          # Phase 2 (P2.1): Gov functor (admitted witness → olog fact) + signed accumulation manifest
    "crates/nucleus-creditworthiness",      # Agent credit file: recompute-verified history → bond-substituting reputation (financial active, externality reserved)
    "crates/nucleus-eval",                  # Recompute-verified eval receipt → CreditEvent: deterministic pass-rate bounds the reward (a lie mints a debit, not a fat credit)
    "crates/nucleus-rubric",                # CT-disciplined cardinal scoring kernel: rank() is a faithful sub-functor over RecomputeVerified dims only (attested/judge carried but inert); Pareto front + scalarization + recomputable VCG-marginal → CreditEvent
    "crates/nucleus-rubric-olog",           # Decidable type-gate: checks a PROPOSED translation between two rubric vocabularies is a valid honesty-preserving functor (Rubric→Schema; criterion-id object map; RV↦RV + max_grade-compat). Verifies a given map, does not synthesize one. Local minimal Schema/SchemaMorphism (no dep on the private olog repo).
    "crates/nucleus-oracle",                # Deterministic held-out grading oracle: grades RECORDED outputs (no exec); ONLY the exact held-out recompute is load-bearing (RecomputeVerified); MR-coverage + mutation-kill are statistical adequacy (Attested, inert); k-of-n is determinism-pinning not consensus; conservative structural gate QUARANTINES gaming → no load-bearing credit
]
# nucleus-claude-hook moved to nucleus-code (private product repo)
# exposure-web is WASM-only (wasm32-unknown-unknown); build with: cd crates/exposure-web && trunk build
# portcullis-python requires Python + maturin; build with: cd crates/portcullis-python && maturin develop
exclude = [
    "crates/exposure-web",       # WASM-only (wasm32-unknown-unknown)
    "crates/nucleus-marketplace-dashboard-frontend", # Leptos CSR (wasm32); build with: cd … && trunk build
    "crates/portcullis-python",  # Python bindings (requires maturin)
    "crates/portcullis-zkvm-guest", # RISC-V zkVM guest (compiled separately by risc0-build)
    "sdks/verifier-js",           # WASM-only (wasm32-unknown-unknown); build with: wasm-pack build sdks/verifier-js
    "examples/a2a-server",        # A2A SDK example server (own workspace); build/test inside examples/a2a-server
    "sdks/verifier-py",           # Python extension module; build with: maturin develop --release
    "tools/nucleus-guarantee-lint", # Dylint lint (own pinned nightly + rustc-dev); run with: cargo dylint --lib nucleus_guarantee_lint
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
# MSRV floor is pinned to the rustc that Kani's bundled toolchain ships
# (kani-verifier 0.67.0 — latest as of 2026-06 — bundles nightly = rustc
# 1.93). `cargo kani` has no `--ignore-rust-version`, so a workspace floor
# above 1.93 makes the Kani BMC job (`-p portcullis`) refuse to compile with
# "rustc 1.93.0-nightly is not supported … requires rustc 1.95". Nothing in
# this workspace uses a 1.94/1.95 lang/std feature (edition is 2021/2024,
# which only need ≤1.85), so 1.93 is the honest floor. Raise this only once
# Kani's bundled nightly catches up, and bump it together with Kani.
rust-version = "1.93"
license = "MIT OR Apache-2.0"
authors = ["Coproduct <hello@coproduct.dev>"]
repository = "https://github.com/coproduct-opensource/nucleus"

[workspace.lints.clippy]
type_complexity = "allow"

[workspace.lints.rust]
# kani BMC harnesses are `#[cfg(kani)]`; allow the cfg for workspace-adopting
# crates so the verified core (and others with kani modules) can use
# `[lints] workspace = true` rather than duplicating a local allow.
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(kani)'] }

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.1"

# Content provenance (EU AI Act)
c2pa = "0.90"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# JWT / OIDC (per-provider validators). The `aws_lc_rs` backend (already in the
# tree via rustls/reqwest) is used instead of `rust_crypto` so jsonwebtoken does
# NOT drag in a second ed25519-dalek (v2) / sha2 (0.10) line — letting the whole
# workspace converge on ed25519-dalek 3 + sha2 0.11. Supports the full alg set
# (RS/PS/ES/EdDSA) we verify. See docs/PROOFS.md and scripts/check-dep-ceiling.sh.
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem", "aws_lc_rs"] }
async-trait = "0.1"

# Async runtime
tokio = { version = "1", default-features = false }
tokio-rustls = "0.26"
tokio-test = "0.4"

# CLI
clap = { version = "4.6", features = ["derive", "env"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry (opt-in via feature flags)
# Pinned to 0.31 because tracing-opentelemetry 0.32.1 (latest) still depends on
# opentelemetry ^0.31; bumping to 0.32 here introduces a Tracer-trait mismatch.
# Revisit when tracing-opentelemetry releases a 0.32-compatible version.
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "http-proto", "trace"] }
tracing-opentelemetry = "0.33"

# Crypto/signing
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
ring = "0.17"

# Embedded key-value store (durable, append-only ledgers — e.g. the
# creditworthiness credit ledger behind its `persist` feature). `4` floats to
# 4.1.0, which is ALREADY resolved transitively (via the iroh-blobs/rcgen
# neighborhood), so this unifies on the existing version with zero new crates.
redb = "4"

# TLS
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
x509-parser = { version = "0.18", features = ["verify"] }

# HTTP
reqwest = { version = "0.13", default-features = false }
axum = { version = "0.8", features = ["macros", "json"] }
ureq = { version = "3.3", features = ["json"] }

# gRPC
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"

# Utils
uuid = { version = "1", features = ["v4"] }
# `wasmbind` makes `Utc::now()` use the browser's `Date.now()` on
# wasm32-unknown-unknown instead of std time (which panics: "time not implemented
# on this platform"). It's inert on non-wasm targets. Required by the ctf-engine
# WASM build (kernel.rs / escalation.rs call Utc::now()).
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "wasmbind"] }
rust_decimal = "1.42"
shell-words = "1.1"
regex = "1.12"

# Encoding
base64 = "0.22"

# Ed25519 (externality envelopes + econ-kernel sealed-bid tests). Pinned to the
# exact prerelease iroh requires (=3.0.0-pre.7) so the WHOLE workspace resolves a
# SINGLE ed25519-dalek — first-party crates, iroh, and (with the aws_lc_rs JWT
# backend) jsonwebtoken no longer split across v2/v3. rc.0 is the newer published
# release but iroh pins =3.0.0-pre.7 exactly, so pre.7 is the unifying version.
ed25519-dalek = "=3.0.0-pre.7"

# Testing
tempfile = "3"
proptest = "1.11"

# AWS SDK (optional, for remote audit sink)
aws-sdk-s3 = "1.134"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }

# zkVM (verifiable computation receipts)
risc0-zkvm = "3.0"

# Build
tonic-prost-build = "0.14"
protoc-bin-vendored = "3.2"
