[package]
name = "nucleus-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.portcullis]
path = "../crates/portcullis"
features = ["serde"]

[[bin]]
name = "command_can_execute"
path = "fuzz_targets/command_can_execute.rs"
test = false
doc = false

[[bin]]
name = "path_can_access"
path = "fuzz_targets/path_can_access.rs"
test = false
doc = false

[[bin]]
name = "permission_serde"
path = "fuzz_targets/permission_serde.rs"
test = false
doc = false

# Host-side Workload API vsock command parser — the trusted guest->host edge.
# Pulls in crates/nucleus-node/src/workload_api_protocol.rs via `#[path]`; no
# crate dependency needed because that module is std-only.
[[bin]]
name = "workload_api_command"
path = "fuzz_targets/workload_api_command.rs"
test = false
doc = false
