[package]
name = "ck-policy"
description = "Constitutional Kernel — policy subset and monotonicity checks"
version.workspace = true
edition.workspace = true
license = "MIT"
readme = "README.md"

[dependencies]
ck-types = { path = "../ck-types" }

[dev-dependencies]
pretty_assertions = "1"
# Preorder laws (reflexive + transitive) of the amendment relation.
proptest = { workspace = true }
