[package]
name = "ck-types"
description = "Constitutional Kernel — core types, manifests, digests, and policy lattice"
version.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
pretty_assertions = "1"
