[package]
name = "ctf-engine"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "Browser-native CTF engine: can your AI agent exfiltrate from a formally verified sandbox?"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
portcullis = { path = "../portcullis", default-features = false, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

# Enable JS-based random for WASM (needed by uuid v4)
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["v4", "js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
