[package]
name = "ctf-engine"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "Browser-native CTF engine: can your AI agent exfiltrate from a formally verified sandbox?"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = [
    "dep:wasm-bindgen",
    "dep:serde-wasm-bindgen",
    "dep:js-sys",
    "dep:console_error_panic_hook",
    "uuid/js",
]

[dependencies]
portcullis = { path = "../portcullis", default-features = false, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WASM-only deps (enabled via `wasm` feature)
wasm-bindgen = { version = "0.2.114", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
# uuid needed to enable js feature for WASM (pulled in via portcullis)
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
