[package]
name = "ctf-server"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "HTTP API server for The Vault CTF challenge"

[[bin]]
name = "ctf-server"
path = "src/main.rs"

[dependencies]
ctf-engine = { path = "../ctf-engine" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rmcp = { version = "1.5", features = ["server", "macros", "transport-streamable-http-server"] }
