[package]
name = "exposure-playground"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Interactive TUI demonstrating the Uninhabitable State prevention system"
repository = "https://github.com/coproduct-opensource/nucleus"
keywords = ["ai", "security", "tui", "demo"]
categories = ["command-line-utilities"]

[lib]
name = "exposure_playground"
path = "src/lib.rs"

[[bin]]
name = "exposure-playground"
path = "src/main.rs"
required-features = ["native"]

[features]
default = ["native"]
native = ["dep:crossterm", "ratatui/crossterm"]

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["all-widgets"] }
crossterm = { version = "0.29", optional = true }
portcullis = { path = "../portcullis", default-features = false }
