[package]
name = "lattice-guard"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "A quotient lattice for AI agent permissions that prevents the 'lethal trifecta'"
repository = "https://github.com/coproduct-opensource/nucleus"
documentation = "https://docs.rs/lattice-guard"
readme = "README.md"
keywords = ["ai", "security", "permissions", "agents", "lattice", "quotient"]
categories = ["authentication", "development-tools"]

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "rust_decimal/serde", "chrono/serde", "uuid/serde"]

# CEL-based policy constraints
cel = ["dep:cel-interpreter"]

# Policy specification loading (YAML/TOML)
spec = ["dep:serde_yaml", "dep:toml", "serde", "cel"]

# Webhook audit backend for SIEM delivery
webhook = ["dep:reqwest", "dep:tokio", "serde"]

# SECURITY: Enable this feature ONLY for testing. It exposes methods that
# bypass security constraints (e.g., disabling trifecta enforcement).
# DO NOT enable in production builds.
testing = []

[dependencies]
chrono = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

# Optional serde support
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Security: proper decimal arithmetic for budget (no f64 exploits)
rust_decimal = { workspace = true }

# Security: proper shell command parsing (no injection via quoting)
shell-words = { workspace = true }

# Glob pattern matching (audited, stable)
regex = { workspace = true }

# CEL expression evaluation (optional, for user-defined nuclei)
cel-interpreter = { version = "0.10", optional = true }

# Policy specification parsing (optional)
serde_yaml = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

# Webhook audit backend (optional)
reqwest = { workspace = true, features = ["json", "rustls-tls-manual-roots"], optional = true }
tokio = { workspace = true, features = ["rt"], optional = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
kani = "0.0.1"
